kubernetes/booking/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: booking-service
  labels:
    app: booking-service

spec:
  replicas: 2

  selector:
    matchLabels:
      app: booking-service

  template:
    metadata:
      labels:
        app: booking-service

    spec:
      containers:
      - name: booking-service

        image: 530700192947.dkr.ecr.ap-south-1.amazonaws.com/booking-service:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"

          limits:
            cpu: "500m"
            memory: "512Mi"

        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080

          initialDelaySeconds: 20
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080

          initialDelaySeconds: 40
          periodSeconds: 20
