kubernetes/booking/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: booking-service
  labels:
    app: booking-service

spec:
  selector:
    app: booking-service

  ports:
    - name: http
      port: 80
      targetPort: 8080

  type: LoadBalancer
