kubernetes/booking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: booking.satishbabu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 80
